# inf

./: .gitignore  CMakeLists.txt
.zed/: debug.json
src/: alloc.cpp  alloc.hpp  gguf.cpp  gguf.hpp  main.cpp  tensor.cpp  tensor.hpp  tensor_op.cpp  tensor_op.hpp  transformer.cpp  transformer.hpp  util.cpp  util.hpp
tests/: test_gguf.cpp  test_tensor.cpp  test_transformer.cpp
